Agendamento de sala

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,3 +11,7 @@
 .animate-marquee {
   animation: marquee 20s linear infinite;
 }
+
+.mc-curso-disciplinas > div:last-child {
+  border: 0!important;
+}
